[gd_scene load_steps=6 format=2]

[ext_resource path="res://Test.gd" type="Script" id=1]
[ext_resource path="res://Objects/Castle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/EnemyFormation.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/NinjaLauncher.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 180, 16 )

[node name="Test" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Castle" parent="." index="0" instance=ExtResource( 2 )]

[node name="EnemyFormation" parent="." index="1" instance=ExtResource( 3 )]

[node name="NinjaLauncher" parent="." index="2" instance=ExtResource( 4 )]

[node name="StaticBody2D" type="StaticBody2D" parent="." index="3" groups=[
"Ground",
]]

position = Vector2( 0, 640 )
input_pickable = false
collision_layer = 3
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]

position = Vector2( 180, 16 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="MoveTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.7
one_shot = true
autostart = false

[connection signal="attack_complete" from="NinjaLauncher" to="." method="_on_attack_complete"]


